--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                         <li class="dropdown"><a href="#home">Home</a></li>
                                         <li class="dropdown"><a href="#about">About</a></li>
                                         <li class="dropdown"><a href="#services">Services</a></li>
-                                        <li class="dropdown"><a href="#projects">Projects</a></li>
+                                        <!-- <li class="dropdown"><a href="#projects">Projects</a></li> -->
                                         <li class="dropdown"><a href="#contact">Contact</a></li>
                                     </ul>
                                 </div>
@@ -276,12 +276,12 @@
         <!-- Services Area Three end -->
         
         <!-- Statistics Area start -->
-        <section id="projects" class="statistics-area-three pt-130 rpt-100 pb-100 rpb-80 text-white bgc-gray">
+        <!-- <section id="projects" class="statistics-area-three pt-130 rpt-100 pb-100 rpb-80 text-white bgc-gray">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-7">
+                    <div class="col-lg-7"> -->
                         <!--<span class="sub-title mb-15" style="color:#03fa6e; font-size: 20px; font-weight: 400;">Our Projects</span>-->
-                        <div class="row rmb-35">
+                        <!-- <div class="row rmb-35"> -->
                             <!-- <div class="col-xl-4 col-sm-6">
                                 <div class="counter-item-three counter-text-wrap wow fadeInDown delay-0-3s">
                                     <i class="flaticon-target"></i>
@@ -289,7 +289,7 @@
                                     <span class="counter-title">Completed Proyects</span>
                                 </div>
                             </div>-->
-                            <div class="col-xl-4 col-sm-6">
+                            <!-- <div class="col-xl-4 col-sm-6">
                                 <div class="counter-item-three counter-text-wrap mt-20 wow fadeInUp delay-0-3s">
                                     <i class="flaticon-target-audience"></i>
                                     <span class="count-text percent" data-speed="3000" data-stop="98.9">0</span>
@@ -316,7 +316,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- Statistics Area end -->
         
         <!-- Contact Form Section Start -->
@@ -382,7 +382,7 @@
                                     </div>
                                     <div class="content">
                                         <span>Email Us</span>
-                                        <h5><a href="mailto:support@gmail.com">support@vitadevs.com</a></h5>
+                                        <h5><a href="mailto:support@gmail.com">teamvitadevs@gmail.com</a></h5>
                                     </div>
                                 </div>
                                 <div class="contact-info-item">
