--- a/index.html
+++ b/index.html
@@ -432,16 +432,16 @@
                             <p>Subscribe to get our latest updates, promotions and discounts.</p>
                             <form action="#" name="submit-to-google-sheet-2" method="post">
                                 <label for="email"><i class="far fa-envelope"></i></label>
-                                <input id="email" type="email" name="Email" placeholder="support@vitadevs.com" required>
+                                <input id="email" type="email" name="Email" placeholder="teamvitadevs@gmail.com" required>
                                 <button type= "button" id= "btn" onclick= "clickEvent()">Sign Up</button>
                             </form>
                             <span id="msg"></span>
                             <h5>Follow Us</h5>
                             <div class="social-style-one">
-                                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="#"><i class="fab fa-instagram"></i></a>
-                                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                <!-- <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#"><i class="fab fa-twitter"></i></a> -->
+                                <a href="https://www.instagram.com/vitadevs/"><i class="fab fa-instagram"></i></a>
+                                <!-- <a href="#"><i class="fab fa-linkedin-in"></i></a> -->
                             </div>
                         </div>
                     </div>
