--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>VitaDevs - Digital & Software Agency</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="width=device-width, initial-scale=1.0 user-scalable=no" name="viewport" >
     <meta content="marketing and software digital agency" name="keywords">
     <meta content="Passion for innovation and technology" name="description">
 
