--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body>
+<body style="max-width: 100%; overflow-x: hidden;">
     <!-- Navbar Start -->
     <div class="container-fluid p-0 nav-bar">
         <nav class="navbar navbar-expand-lg bg-none navbar-dark fixed-top" style="background-color: #171810;">
