--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <body style="max-width: 100%; overflow-x: hidden;">
     <!-- Navbar Start -->
     <div class="container-fluid p-0 nav-bar">
-        <nav class="navbar navbar-expand-lg bg-none navbar-dark fixed-top" style="background-color: #171810;">
-            <a href="index.html" class="navbar-brand px-lg-4 m-0">
+        <nav class="navbar navbar-expand-lg bg-none navbar-dark fixed-top bar" style="background-color: #171810;">
+            <a href="index.html" class="navbar-brand px-lg-4 m-0 logo">
                 <img src="img/logo.png" height="100" alt="">
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
